# acli

./: .env.example  Cargo.toml  flake.nix  issues.md  om.toml  readme.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: ctag.rs  lib.rs  main.rs
shared/: Cargo.toml
shared/src/: confluence.rs  errors.rs  lib.rs  models.rs
tui/: Cargo.toml
tui/src/: app.rs  command.rs  domain_loader.rs  event.rs  event_handler.rs  lib.rs  main.rs  models.rs  screens.rs  search.rs  signal_handler.rs  terminal_manager.rs  tree_navigation.rs  ui.rs
tui/tests/: command_execution.rs
