[workspace]
resolver = "2"
members = [
  "shared",
  "cli",
  "tui",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A rust and nix template repository."
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
documentation = "https://ocasazza.github.io/acli/docs/index.html"
repository = "https://github.com/ocasazza/acli"
homepage = "https://github.com/ocasazza/acli"
readme = "readme.md"
keywords = ["nix", "atlassian"]
