[package]
name = "acli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "acli"
path = "src/main.rs"

[dependencies]
nix_rust_template = { path = "../shared" }
clap = { version = "4.3.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
