[package]
name = "atui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "atui"
path = "src/main.rs"

[dependencies]
nix_rust_template = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.24"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
url = "2.4"
sublime_fuzzy = "0.7"
